--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,11 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	//compile("org.springframework.boot:spring-boot-starter-security")
+	compile("org.springframework.boot:spring-boot-starter-security")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     compile 'mysql:mysql-connector-java'
+    
+    
+    
 }
